# 2024_autify_vives_llm

./: .gitignore  README.md
llm-webapp/: Dockerfile  pyproject.toml
llm-webapp/instance/: llm_webapp.sqlite
llm-webapp/llm_webapp/: __init__.py  auth.py  chat.py  db.py  hello.py  mixtral.py  openai.py  schema.sql  user_settings.py
llm-webapp/llm_webapp/static/: style.css
llm-webapp/llm_webapp/templates/: base.html
llm-webapp/llm_webapp/templates/auth/: register.html
llm-webapp/llm_webapp/templates/chat/: chat_view.html  create.html  index.html
llm-webapp/llm_webapp/templates/user_settings/: base_settings.html  custom_model_settings.html  openai_settings.html
