[tool.poetry]
name = "llm-webapp"
version = "0.1.0"
description = ""
authors = ["cvivesa <vives@vt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
openai = "^1.14.2"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
